:sparkles: Init of my software craftsmanship blog

--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -24,7 +24,8 @@
 }
 
 .avatar img {
-  height: 120px;
+  height: 250px;
+  border-radius: 50%;
 }
 
 .name {
@@ -33,4 +34,8 @@
 
 .name a {
   color: inherit;
+}
+
+.skills {
+  text-align: center;
 }
