--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -362,15 +362,24 @@ footer {
   text-align: center;
 }
 
-footer img {
-  display: block;
-  margin: 0.5rem auto;
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #000;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  transition: opacity 0.3s;
 }
 
-footer span:nth-child(3) {
-  color: #777777;
-}
-
-footer span:nth-child(3) a {
-  color: inherit;
+.scroll-to-top:hover {
+  opacity: 0.8;
 }
